commit ReWork Design - index navbar test fix -carousel mx fix

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img src="img/banner_fp_logo_banner.png" class="d-block w-100" alt="...">
-                  <div class="carousel-caption d-md-block smCaption">
+                  <div class="carousel-caption d-md-block smCaption mx-1">
                     <h5 class="h5carousel">Selamat Datang di SeraYu Fansub Website Anime 60 FPS</h5>
                     <p class="pcarousel">Terima kasih telah mengunjungi website kami. Nikmati anime kesukaan mu dalam 60
                       fps
@@ -177,7 +177,7 @@
                 </div>
                 <div class="carousel-item">
                   <img src="img/banner_fp_under contructioon.png" class="d-block w-100" alt="...">
-                  <div class="carousel-caption d-md-block smCaption">
+                  <div class="carousel-caption d-md-block smCaption mx-1">
                     <h5 class="h5carousel">Website Masih Dalam Tahap Beta</h5>
                     <p class="pcarousel">ini merupakan website baru kami, mohon maaf bila kalian menemukan bug yang
                       mengganggu.
@@ -189,7 +189,7 @@
                 </div>
                 <div class="carousel-item">
                   <img src="img/banner_fp_support.png" class="d-block w-100" alt="...">
-                  <div class="carousel-caption d-md-block smCaption">
+                  <div class="carousel-caption d-md-block smCaption mx-1">
                     <h5 class="h5carousel">Tolong Support Kami</h5>
                     <p class="pcarousel">Support kalian merupakan hal terpenting bagi kami. Share website ini ke teman
                       kalian dan social media
