--- a/index.html
+++ b/index.html
@@ -115,14 +115,19 @@
             </li>
             <li class="nav-item mx-xl-2 ">
               <form class="form-inline my-2 my-xl-0">
-                <button class="btn btn-outline-primary" type="button">Notify Me!!!</button>
+                <button class="btn btn-outline-primary" type="button">Notify&nbsp;Me!!!</button>
               </form>
             </li>
-            
+
           </ul>
-          <form class="form-inline my-2 my-xl-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light my-2 my-sm-0" type="submit" onclick="BlockedTest()">Search</button>
+          <form class="form-row my-2 my-xl-0">
+            <div class="col-10">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            </div>
+            <div class="col-2">
+              <button class="btn btn-outline-light my-2 my-sm-0" type="submit" onclick="BlockedTest()"><i
+                  class="bi bi-search"></i></button>
+            </div>
           </form>
         </div>
     </div>
@@ -168,18 +173,18 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img src="img/banner_fp_logo_banner.png" class="d-block w-100" alt="...">
-                  <div class="carousel-caption d-md-block smCaption mx-1">
-                    <h5 class="h5carousel">Selamat Datang di SeraYu Fansub Website Anime 60 FPS</h5>
-                    <p class="pcarousel">Terima kasih telah mengunjungi website kami. Nikmati anime kesukaan mu dalam 60
+                  <div class="carousel-caption d-md-block smCaption ">
+                    <h5 class="h5carousel mx-1">Selamat Datang di SeraYu Fansub Website Anime 60 FPS</h5>
+                    <p class="pcarousel mx-1">Terima kasih telah mengunjungi website kami. Nikmati anime kesukaan mu dalam 60
                       fps
                     </p>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img src="img/banner_fp_under contructioon.png" class="d-block w-100" alt="...">
-                  <div class="carousel-caption d-md-block smCaption mx-1">
-                    <h5 class="h5carousel">Website Masih Dalam Tahap Beta</h5>
-                    <p class="pcarousel">ini merupakan website baru kami, mohon maaf bila kalian menemukan bug yang
+                  <div class="carousel-caption d-md-block smCaption ">
+                    <h5 class="h5carousel mx-1">Website Masih Dalam Tahap Beta</h5>
+                    <p class="pcarousel mx-1">ini merupakan website baru kami, mohon maaf bila kalian menemukan bug yang
                       mengganggu.
                       Silahkan berikan laporan bug ke Discord kami atau berikan sugesti, kritik dan saran kalian.
                       Para admin, programmer dan designer kami terus bekerja keras dalam menyelesaikan website ini.
@@ -189,9 +194,9 @@
                 </div>
                 <div class="carousel-item">
                   <img src="img/banner_fp_support.png" class="d-block w-100" alt="...">
-                  <div class="carousel-caption d-md-block smCaption mx-1">
-                    <h5 class="h5carousel">Tolong Support Kami</h5>
-                    <p class="pcarousel">Support kalian merupakan hal terpenting bagi kami. Share website ini ke teman
+                  <div class="carousel-caption d-md-block smCaption ">
+                    <h5 class="h5carousel mx-1">Tolong Support Kami</h5>
+                    <p class="pcarousel mx-1">Support kalian merupakan hal terpenting bagi kami. Share website ini ke teman
                       kalian dan social media
                       kalian.
                       bergabung ke discord kami dan berikan partisipasi kalian disana.
