commit ReWork Design -fix format

--- a/animeList.html
+++ b/animeList.html
@@ -179,9 +179,11 @@
                       </div>
                       <div class="row">
                         <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Shounen</a></div>
-                        <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Slice of Life</a></div>
+                        <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Slice of Life</a>
+                        </div>
                         <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Sport</a></div>
-                        <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Supernatural</a></div>
+                        <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Supernatural</a>
+                        </div>
                       </div>
 
                     </div>
