--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
                   <img src="img/banner_fp_logo_banner.png" class="d-block w-100" alt="...">
                   <div class="carousel-caption d-md-block smCaption ">
                     <h5 class="h5carousel mx-1">Selamat Datang di SeraYu Fansub Website Anime 60 FPS</h5>
-                    <p class="pcarousel mx-1">Terima kasih telah mengunjungi website kami. Nikmati anime kesukaan mu dalam 60
+                    <p class="pcarousel mx-1">Terima kasih telah mengunjungi website kami. Nikmati anime kesukaan mu
+                      dalam 60
                       fps
                     </p>
                   </div>
@@ -196,7 +197,8 @@
                   <img src="img/banner_fp_support.png" class="d-block w-100" alt="...">
                   <div class="carousel-caption d-md-block smCaption ">
                     <h5 class="h5carousel mx-1">Tolong Support Kami</h5>
-                    <p class="pcarousel mx-1">Support kalian merupakan hal terpenting bagi kami. Share website ini ke teman
+                    <p class="pcarousel mx-1">Support kalian merupakan hal terpenting bagi kami. Share website ini ke
+                      teman
                       kalian dan social media
                       kalian.
                       bergabung ke discord kami dan berikan partisipasi kalian disana.
