--- a/animeList.html
+++ b/animeList.html
@@ -43,13 +43,13 @@
 
 
   <!-- #Header-->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-    <div class="container">
+  <nav class="navbar navbar-expand-xl navbar-dark bg-dark mb-4">
+    <div class="container-fluid ">
 
       <a class="navbar-brand" href="index.html" style="color: white;">
         <a class="navbar-brand" href="index.html">
           <img src="img/SeraYu_Logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
-          SeraYu Fansub</a>
+          SeraYu Fansub 60 FPS</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
           aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -63,22 +63,6 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
-                Genre
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Comedy</a>
-                <a class="dropdown-item" href="#">Drama</a>
-                <a class="dropdown-item" href="#">Fantasy</a>
-                <a class="dropdown-item" href="#">Romance</a>
-                <a class="dropdown-item" href="#">Slice of Life</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="g_page.php">See More...</a>
-              </div>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
                 Type
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -87,8 +71,16 @@
                 <a class="dropdown-item" href="#">OVA / ONA / Special</a>
               </div>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="l_update.php">Latest Update</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Anime List
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Anime List</a>
+                <a class="dropdown-item" href="#">Genre</a>
+                <a class="dropdown-item" href="#">Latest Update</a>
+              </div>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="l_update.php">Gallery</a>
@@ -110,7 +102,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
-                Random Shit
+                Random
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">Wangy maker</a>
@@ -118,10 +110,24 @@
                 <a class="dropdown-item" href="g_page.php">See More...</a> -->
               </div>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="l_update.php">Tutorial</a>
+            </li>
+            <li class="nav-item mx-xl-2 ">
+              <form class="form-inline my-2 my-xl-0">
+                <button class="btn btn-outline-primary" type="button">Notify&nbsp;Me!!!</button>
+              </form>
+            </li>
+
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+          <form class="form-row my-2 my-xl-0">
+            <div class="col-10">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            </div>
+            <div class="col-2">
+              <button class="btn btn-outline-light my-2 my-sm-0" type="submit" onclick="BlockedTest()"><i
+                  class="bi bi-search"></i></button>
+            </div>
           </form>
         </div>
     </div>
