--- a/dmca.html
+++ b/dmca.html
@@ -143,7 +143,7 @@
       <div class="col-12 col-lg-9 mb-4">
         <div class="row">
 
-          <!-- #Description Box-->
+          <!-- #DMCA Box-->
           <div class="col-12">
             <div class="bg-white rounded-corner px-3 py-3 mb-4">
               <div class="col-12 bg-light rounded-corner border  ">
@@ -256,7 +256,7 @@
               </div>
             </div>
           </div>
-          <!-- #EndDescription Box-->
+          <!-- #EndDMCA Box-->
 
         </div>
       </div>
