--- a/feedback.html
+++ b/feedback.html
@@ -143,7 +143,7 @@
             <div class="col-12 col-lg-9 mb-4">
                 <div class="row">
 
-                    <!-- #Description Box-->
+                    <!-- #Feedback Box-->
                     <div class="col-12">
                         <div class="bg-white rounded-corner px-3 py-3 mb-4">
                             <div class="col-12 bg-light rounded-corner border  ">
@@ -196,9 +196,9 @@
                             </div>
                         </div>
                     </div>
-                    <!-- #EndDescription Box-->
+                    <!-- #EndFeedback Box-->
 
-                    <!-- #Description Box-->
+                    <!-- #Donasi Box-->
                     <div class="col-12">
                         <div class="bg-white rounded-corner px-3 py-3 mb-4">
                             <div class="col-12 bg-light rounded-corner border  ">
@@ -240,7 +240,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- #EndDescription Box-->
+                    <!-- #EndDonasi Box-->
 
                 </div>
             </div>
