commit ReWork Design - Index New Card Rework

--- a/index.html
+++ b/index.html
@@ -218,133 +218,141 @@
           <div class="col-12">
             <div class="row">
 
-              <!-- #Card-->
+              <!-- #CardMovie-->
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
                 <div class="card catalogCard">
                   <a class="btn btn-success" href="movie.php"> Movie </a>
-                  <a href="animePages.html" class="myshow"><img class="card-img-top h-100"
-                      src="img/Anime/Kimi_no_nawa.jpg">
+                  <a href="animePages.html" class="myshow"><img class="card-img-top "
+                      src="img/Anime/Kimi_no_nawa.png">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
-                      <small class="text-white">Post on 20-02-2020</small>
+                      <small class="text-white">Post on 20-03-2020</small>
                     </div>
-                  </a>
-                  <a class="btn btn-primary" href="animePages.html#download"> Download </a>
+                </div>
+                <div>
+                  <a class="btn btn-primary btn-block" href="animePages.html#download"> Download </a>
                 </div>
               </div>
-              <!-- #endCard -->
+              <!-- #endCardMovie -->
 
-              <!-- #Card-->
+              <!-- #CardTv-->
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
                 <div class="card catalogCard">
-                  <a class="btn btn-success" href="movie.php"> Movie </a>
-                  <a href="animePages.html" class="myshow"><img class="card-img-top h-100"
-                      src="img/Anime/Kimi_no_nawa.jpg">
+                  <a class="btn btn-warning" href="movie.php"> Tv Series </a>
+                  <a href="animePages.html" class="myshow"><img class="card-img-top"
+                      src="img/Anime/fly_me_to_moon.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
-                      <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
-                      <small class="text-white">Post on 20-02-2020</small>
+                      <h6 class="card-title img-overlay-anchor"><strong>Tonikaku Kawaii</strong></h6>
+                      <small class="text-white">Post on 23-02-2020</small>
                     </div>
-                  </a>
-                  <a class="btn btn-primary" href="animePages.html#download"> Download </a>
+                </div>
+                <div>
+                  <a class="btn btn-primary btn-block" href="animePages.html#download"> Download </a>
                 </div>
               </div>
-              <!-- #endCard -->
+              <!-- #endCardTv -->
+              
+              <!-- #CardTv-->
+              <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
+                <div class="card catalogCard">
+                  <a class="btn btn-warning" href="movie.php"> Tv Series </a>
+                  <a href="animePages.html" class="myshow"><img class="card-img-top"
+                      src="img/Anime/majo_no_tabi.jpg">
+                    <div class="card-img-overlay anchor-bg-color overlay">
+                      <h6 class="card-title img-overlay-anchor"><strong>Majo no Tabitabi</strong></h6>
+                      <small class="text-white">Post on 20-02-2020</small>
+                    </div>
+                </div>
+                <div>
+                  <a class="btn btn-primary btn-block" href="animePages.html#download"> Download </a>
+                </div>
+              </div>
+              <!-- #endCardTv -->
 
-              <!-- #Card-->
+              <!-- #CardSpecial-->
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
                 <div class="card catalogCard">
-                  <a class="btn btn-success" href="movie.php"> Movie </a>
-                  <a href="animePages.html" class="myshow"><img class="card-img-top h-100"
-                      src="img/Anime/Kimi_no_nawa.jpg">
+                  <a class="btn btn-danger" href="movie.php"> Special </a>
+                  <a href="animePages.html" class="myshow"><img class="card-img-top "
+                      src="img/Anime/violet_ova.png">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
-                      <small class="text-white">Post on 20-02-2020</small>
+                      <small class="text-white">Post on 19-02-2020</small>
                     </div>
-                  </a>
-                  <a class="btn btn-primary" href="animePages.html#download"> Download </a>
+                </div>
+                <div>
+                  <a class="btn btn-primary btn-block" href="animePages.html#download"> Download </a>
                 </div>
               </div>
-              <!-- #endCard -->
+              <!-- #endCardSpecial -->
 
-              <!-- #Card-->
+              <!-- #CardTv-->
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
                 <div class="card catalogCard">
-                  <a class="btn btn-success" href="movie.php"> Movie </a>
-                  <a href="animePages.html" class="myshow"><img class="card-img-top h-100"
-                      src="img/Anime/Kimi_no_nawa.jpg">
+                  <a class="btn btn-warning" href="movie.php"> Tv Series </a>
+                  <a href="animePages.html" class="myshow"><img class="card-img-top"
+                      src="img/Anime/mushoku_tensei.png">
                     <div class="card-img-overlay anchor-bg-color overlay">
-                      <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
-                      <small class="text-white">Post on 20-02-2020</small>
+                      <h6 class="card-title img-overlay-anchor"><strong>Mushoku Tensei: Isekai Ittara Honki Dasu</strong></h6>
+                      <small class="text-white">Post on 11-02-2020</small>
                     </div>
-                  </a>
-                  <a class="btn btn-primary" href="animePages.html#download"> Download </a>
+                </div>
+                <div>
+                  <a class="btn btn-primary btn-block" href="animePages.html#download"> Download </a>
                 </div>
               </div>
-              <!-- #endCard -->
+              <!-- #endCardTv -->
 
-              <!-- #Card-->
+              <!-- #CardTv-->
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
                 <div class="card catalogCard">
-                  <a class="btn btn-success" href="movie.php"> Movie </a>
-                  <a href="animePages.html" class="myshow"><img class="card-img-top h-100"
-                      src="img/Anime/Kimi_no_nawa.jpg">
+                  <a class="btn btn-warning" href="movie.php"> Tv Series </a>
+                  <a href="animePages.html" class="myshow"><img class="card-img-top"
+                      src="img/Anime/toaru_railgun.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
-                      <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
-                      <small class="text-white">Post on 20-02-2020</small>
+                      <h6 class="card-title img-overlay-anchor"><strong>Toaru Kagaku no Railgun</strong></h6>
+                      <small class="text-white">Post on 7-02-2020</small>
                     </div>
-                  </a>
-                  <a class="btn btn-primary" href="animePages.html#download"> Download </a>
+                </div>
+                <div>
+                  <a class="btn btn-primary btn-block" href="animePages.html#download"> Download </a>
                 </div>
               </div>
-              <!-- #endCard -->
+              <!-- #endCardTv -->
+              
+              <!-- #CardTv-->
+              <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
+                <div class="card catalogCard">
+                  <a class="btn btn-warning" href="movie.php"> Tv Series </a>
+                  <a href="animePages.html" class="myshow"><img class="card-img-top"
+                      src="img/Anime/horimiya.jpg">
+                    <div class="card-img-overlay anchor-bg-color overlay">
+                      <h6 class="card-title img-overlay-anchor"><strong>Horimiya</strong></h6>
+                      <small class="text-white">Post on 4-02-2020</small>
+                    </div>
+                </div>
+                <div>
+                  <a class="btn btn-primary btn-block" href="animePages.html#download"> Download </a>
+                </div>
+              </div>
+              <!-- #endCardTv -->
 
-              <!-- #Card-->
+              <!-- #CardMovie-->
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
                 <div class="card catalogCard">
                   <a class="btn btn-success" href="movie.php"> Movie </a>
-                  <a href="animePages.html" class="myshow"><img class="card-img-top h-100"
-                      src="img/Anime/Kimi_no_nawa.jpg">
+                  <a href="animePages.html" class="myshow"><img class="card-img-top "
+                      src="img/Anime/tenki_no_ko.png">
                     <div class="card-img-overlay anchor-bg-color overlay">
-                      <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
-                      <small class="text-white">Post on 20-02-2020</small>
+                      <h6 class="card-title img-overlay-anchor"><strong>Tenki no Ko</strong></h6>
+                      <small class="text-white">Post on 1-02-2020</small>
                     </div>
-                  </a>
-                  <a class="btn btn-primary" href="animePages.html#download"> Download </a>
+                </div>
+                <div>
+                  <a class="btn btn-primary btn-block" href="animePages.html#download"> Download </a>
                 </div>
               </div>
-              <!-- #endCard -->
-
-              <!-- #Card-->
-              <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
-                <div class="card catalogCard">
-                  <a class="btn btn-success" href="movie.php"> Movie </a>
-                  <a href="animePages.html" class="myshow"><img class="card-img-top h-100"
-                      src="img/Anime/Kimi_no_nawa.jpg">
-                    <div class="card-img-overlay anchor-bg-color overlay">
-                      <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
-                      <small class="text-white">Post on 20-02-2020</small>
-                    </div>
-                  </a>
-                  <a class="btn btn-primary" href="animePages.html#download"> Download </a>
-                </div>
-              </div>
-              <!-- #endCard -->
-
-              <!-- #Card-->
-              <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
-                <div class="card catalogCard">
-                  <a class="btn btn-success" href="movie.php"> Movie </a>
-                  <a href="animePages.html" class="myshow"><img class="card-img-top h-100"
-                      src="img/Anime/Kimi_no_nawa.jpg">
-                    <div class="card-img-overlay anchor-bg-color overlay">
-                      <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
-                      <small class="text-white">Post on 20-02-2020</small>
-                    </div>
-                  </a>
-                  <a class="btn btn-primary" href="animePages.html#download"> Download </a>
-                </div>
-              </div>
-              <!-- #endCard -->
+              <!-- #endCardMovie -->
 
 
               <!-- #Pagination-->
