commit ReWork Design - Index New Card Rework fix

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                   <a href="animePages.html" class="myshow"><img class="card-img-top "
                       src="img/Anime/violet_ova.png">
                     <div class="card-img-overlay anchor-bg-color overlay">
-                      <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
+                      <h6 class="card-title img-overlay-anchor"><strong>Violet Evergarden: Kitto "Ai" wo Shiru Hi ga Kuru no Darou</strong></h6>
                       <small class="text-white">Post on 19-02-2020</small>
                     </div>
                 </div>
