commit ReWork Design - Index New Card Rework fix - dmca fix

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <!-- #Iklan Box-->
             <div class="mb-2 justify-content-center col-12 mx-auto text-center">
               <a href="">
-                <img src="img/banner_iklan_Trakteer.png" alt="" class="img-fluid mb-2 mx-auto">
+                <img src="img/banner_60fps.png" alt="" class="img-fluid mb-2 mx-auto">
               </a>
             </div>
             <!-- #Iklan Box -->
@@ -210,6 +210,8 @@
 
 
             </div>
+            
+
 
           </div>
           <!-- #endSlideshow -->
