--- a/animePages.html
+++ b/animePages.html
@@ -143,7 +143,7 @@
 
                     <!-- #Gambar anime-->
                     <div class="col-6 offset-3 offset-md-0 col-md-4 mb-4 ">
-                        <img src="img/Anime/Kimi_no_nawa.jpg" class="img-fluid">
+                        <img src="img/Anime/Kimi_no_nawa.png" class="img-fluid">
 
                     </div>
                     <!-- #endGambar Anime -->
