commit ReWork Design - header fix - id fix

--- a/footFeedback.html
+++ b/footFeedback.html
@@ -144,7 +144,7 @@
         <div class="row">
 
           <!-- #Feedback Box-->
-          <div class="col-12">
+          <div class="col-12" id="feedback">
             <div class="bg-white rounded-corner px-3 py-3 mb-4">
               <div class="col-12 bg-light rounded-corner border  ">
 
@@ -199,7 +199,7 @@
           <!-- #EndFeedback Box-->
 
           <!-- #Donasi Box-->
-          <div class="col-12">
+          <div class="col-12" id="donasi">
             <div class="bg-white rounded-corner px-3 py-3 mb-4">
               <div class="col-12 bg-light rounded-corner border  ">
 
@@ -242,8 +242,8 @@
           </div>
           <!-- #EndDonasi Box-->
 
-          <!-- #Donasi Box-->
-          <div class="col-12">
+          <!-- #jasa Box-->
+          <div class="col-12" id="jasa">
             <div class="bg-white rounded-corner px-3 py-3 mb-4">
               <div class="col-12 bg-light rounded-corner border  ">
 
@@ -286,7 +286,7 @@
               </div>
             </div>
           </div>
-          <!-- #EndDonasi Box-->
+          <!-- #EndJasa Box-->
 
 
         </div>
