--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                 Anime List
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="listAnimeList.html">Anime List</a>
-                <a class="dropdown-item" href="listGenreList.html">Genre</a>
+                <a class="dropdown-item" href="listAnimeList.html#animeList">Anime List</a>
+                <a class="dropdown-item" href="listAnimeList.html#genreList">Genre</a>
                 <a class="dropdown-item" href="listLastestUpdate.html">Latest Update</a>
               </div>
             </li>
