--- a/listAnimeList.html
+++ b/listAnimeList.html
@@ -144,7 +144,7 @@
         <div class="row">
 
           <!-- #Genre Box-->
-          <div class="col-12">
+          <div class="col-12" id="genreList">
             <div class="bg-white rounded-corner px-3 py-3 mb-4">
               <div class="col-12 bg-light rounded-corner border  ">
                 <div class="col-12 px-0 py-1 text-justify">
@@ -202,7 +202,7 @@
           <!-- #EndGenre Box-->
 
           <!-- #AnimeList Box-->
-          <div class="col-12">
+          <div class="col-12 " id="animeList">
             <div class="bg-white rounded-corner px-3 py-3 mb-4">
               <div class="col-12 bg-light rounded-corner border  ">
 
