commit ReWork Design - index card fix hover

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body >
+<body>
   <!-- JavaScript -->
   <script src="js/scriptMain.js"></script>
 
@@ -105,7 +105,7 @@
                 Random
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="randomPatchNote.html" >Patch Notes</a>
+                <a class="dropdown-item" href="randomPatchNote.html">Patch Notes</a>
                 <a class="dropdown-item" href="" onclick="BlockedTest()">Wangy maker</a>
                 <!-- <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="g_page.php">See More...</a> -->
@@ -223,8 +223,8 @@
             <div class="row">
 
               <!-- #CardMovie-->
-              <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
-                <div class="card catalogCard">
+              <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
+                <div class="card">
                   <a class="btn btn-success" href="typeMovie.html"> Movie </a>
                   <a href="animePages.html" class="myshow"><img class="card-img-top " src="img/Anime/Kimi_no_nawa.png">
                     <div class="card-img-overlay anchor-bg-color overlay">
@@ -239,8 +239,8 @@
               <!-- #endCardMovie -->
 
               <!-- #CardTv-->
-              <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
-                <div class="card catalogCard">
+              <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
+                <div class="card">
                   <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
                   <a href="animePages.html" class="myshow"><img class="card-img-top" src="img/Anime/fly_me_to_moon.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
@@ -255,8 +255,8 @@
               <!-- #endCardTv -->
 
               <!-- #CardTv-->
-              <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
-                <div class="card catalogCard">
+              <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
+                <div class="card">
                   <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
                   <a href="animePages.html" class="myshow"><img class="card-img-top" src="img/Anime/majo_no_tabi.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
@@ -271,8 +271,8 @@
               <!-- #endCardTv -->
 
               <!-- #CardSpecial-->
-              <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
-                <div class="card catalogCard">
+              <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
+                <div class="card">
                   <a class="btn btn-danger" href="typeSpecial.html"> Special </a>
                   <a href="animePages.html" class="myshow"><img class="card-img-top " src="img/Anime/violet_ova.png">
                     <div class="card-img-overlay anchor-bg-color overlay">
@@ -288,8 +288,8 @@
               <!-- #endCardSpecial -->
 
               <!-- #CardTv-->
-              <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
-                <div class="card catalogCard">
+              <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
+                <div class="card">
                   <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
                   <a href="animePages.html" class="myshow"><img class="card-img-top" src="img/Anime/mushoku_tensei.png">
                     <div class="card-img-overlay anchor-bg-color overlay">
@@ -305,8 +305,8 @@
               <!-- #endCardTv -->
 
               <!-- #CardTv-->
-              <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
-                <div class="card catalogCard">
+              <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
+                <div class="card">
                   <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
                   <a href="animePages.html" class="myshow"><img class="card-img-top" src="img/Anime/toaru_railgun.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
@@ -321,8 +321,8 @@
               <!-- #endCardTv -->
 
               <!-- #CardTv-->
-              <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
-                <div class="card catalogCard">
+              <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
+                <div class="card">
                   <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
                   <a href="animePages.html" class="myshow"><img class="card-img-top" src="img/Anime/horimiya.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
@@ -337,8 +337,8 @@
               <!-- #endCardTv -->
 
               <!-- #CardMovie-->
-              <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
-                <div class="card catalogCard">
+              <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
+                <div class="card">
                   <a class="btn btn-success" href="typeMovie.html"> Movie </a>
                   <a href="animePages.html" class="myshow"><img class="card-img-top " src="img/Anime/tenki_no_ko.png">
                     <div class="card-img-overlay anchor-bg-color overlay">
