commit ReWork Design - download collapse fix

--- a/animePages.html
+++ b/animePages.html
@@ -376,7 +376,7 @@
                                             </div>
                                         </a>
 
-                                        <div class="collapse show " id="collapse1080">
+                                        <div class="collapse " id="collapse1080">
                                             <div class="col-12" id="googleDrive">
                                                 <div class="row">
 
@@ -490,7 +490,7 @@
                                             </div>
                                         </a>
 
-                                        <div class="collapse show " id="collapse720">
+                                        <div class="collapse " id="collapse720">
                                             <div class="col-12" id="googleDrive">
                                                 <div class="row">
 
@@ -604,7 +604,7 @@
                                             </div>
                                         </a>
 
-                                        <div class="collapse show " id="collapse480">
+                                        <div class="collapse " id="collapse480">
                                             <div class="col-12" id="googleDrive">
                                                 <div class="row">
 
