commit ReWork Design - fix about us title

--- a/footAboutUs.html
+++ b/footAboutUs.html
@@ -158,7 +158,8 @@
                                     <hr>
 
                                     <div class="collapse show " id="collapseMainDesc">
-                                        <h1>About Serayu Fansub</h1>
+                                        <h1>About </h1>
+                                        <h1>Serayu Fansub</h1>
 
                                         
 
